--- a/templates/add.html
+++ b/templates/add.html
@@ -122,7 +122,7 @@
                 </div>
             </div>
         <div align="center">
-            <input type="submit" class="btn btn-primary" value="Upload">
+            <input type="submit" class="btn btn-primary" name="add_grades" value="Upload">
         </div>
     </form>
 </div>
